// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttesteratResultatMakuleratEvent creates a result that is retracted 1`] = `
{
  "ReportedResult": {
    "id": "a4565646-b3b8-11ee-bf6a-e2af0a9345af-3eb523553de70cfdee1fea0ed6b9ec9d7779de0e877761bfe82860b2669f609c",
    "retraction": {
      "Anteckning": "Det bidde fel i systemet. Jag har makulerat beslutet.",
      "BeslutUID": "34b1ff17-603e-11e9-9dcc-b1e66e1540b0",
      "Beslutsdatum": "2024-01-16",
      "Beslutsfattare": "Emil Stenberg (IT)",
      "BeslutsfattareUID": "34b1ff17-603e-11e9-9dcc-b1e66e1540b0",
    },
  },
}
`;

exports[`AttesteratResultatMakuleratEvent marks an existing result as retracted 1`] = `
{
  "ReportedResult": {
    "id": "a4565646-b3b8-11ee-bf6a-e2af0a9345af-3eb523553de70cfdee1fea0ed6b9ec9d7779de0e877761bfe82860b2669f609c",
    "retraction": {
      "Anteckning": "Det bidde fel i systemet. Jag har makulerat beslutet.",
      "BeslutUID": "34b1ff17-603e-11e9-9dcc-b1e66e1540b0",
      "Beslutsdatum": "2024-01-16",
      "Beslutsfattare": "Emil Stenberg (IT)",
      "BeslutsfattareUID": "34b1ff17-603e-11e9-9dcc-b1e66e1540b0",
    },
  },
}
`;

exports[`AttesteratResultatMakuleratEvent stores a transaction log 1`] = `
[
  {
    "action": "insert",
    "collectionName": "ReportedResult",
    "createdAt": "1884-01-01 Test Dummy",
    "delta": {
      "id": "a4565646-b3b8-11ee-bf6a-e2af0a9345af-3eb523553de70cfdee1fea0ed6b9ec9d7779de0e877761bfe82860b2669f609c",
      "retraction": {
        "Anteckning": "Det bidde fel i systemet. Jag har makulerat beslutet.",
        "BeslutUID": "34b1ff17-603e-11e9-9dcc-b1e66e1540b0",
        "Beslutsdatum": "2024-01-16",
        "Beslutsfattare": "Emil Stenberg (IT)",
        "BeslutsfattareUID": "34b1ff17-603e-11e9-9dcc-b1e66e1540b0",
      },
    },
    "relatedId": "__dummy_id__",
  },
]
`;
